--- a/index.html
+++ b/index.html
@@ -40,21 +40,19 @@
             <span id="totalProduct" class="badge bg-primary rounded-pill">0</span>
           </h4>
           <ul id="ulCart" class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between bg-light">
-              <div class="text-success">
-                <h6 class="my-0">Promo code</h6>
-              </div>
-              <span class="text-success"></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Total (USD)</span>
-              <strong id="totalMoney">0</strong>
-            </li>
+            
           </ul>
           <form class="card p-2">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code">
-              <button type="submit" class="btn btn-secondary">Redeem</button>
+              <select class="bg-light col-sm-9" id="promoPercent">
+                <option value="0">None</option>
+                <option value="10">Discount 10%</option>
+                <option value="20">Discount 20%</option>
+                <option value="30">Discount 30%</option>
+                <option value="40">Discount 40%</option>
+                <option value="50">Discount 50%</option>
+              </select>
+              <button type="button" class="btn btn-secondary col-sm-3" onclick="addPromo()">Apply</button>
             </div>
           </form>
 
@@ -113,13 +111,6 @@
       </div>
       <span class="text-muted"><b>${formatNumber(intomoney)}</b></span><br>
       <button class="btn btn-danger" onclick="DeleteProduct('${codeProduct}')">Delete</button>
-    </li>
-    <li class="list-group-item d-flex justify-content-between bg-light">
-      <div class="text-success">
-        <h6 class="my-0">Promo code</h6>
-        <small>EXAMPLECODE</small>
-      </div>
-      <span class="text-success">−$5</span>
     </li>
     <li class="list-group-item d-flex justify-content-between">
       <span>Total (USD)</span>
