--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
               <button type="button" class="btn btn-secondary col-sm-3" onclick="addPromo()">Apply</button>
             </div>
           </form>
+          <div class="list-group-item d-flex justify-content-between">
+            <span>Total (USD)</span>
+            <strong id="totalMoney">0</strong>
+          </div>
 
         </div>
         <div class="col-md-7 col-lg-8">
@@ -107,14 +111,10 @@
       <div>
         <h6 class="my-0">${codeProduct}</h6>
         <small class="text-muted">${nameProduct}<br>
-          Unit: <b>${Quantity}</b> ${unit}</small>
+          Unit: <b>${nowQuantity}</b> ${unit}</small>
       </div>
       <span class="text-muted"><b>${formatNumber(intomoney)}</b></span><br>
       <button class="btn btn-danger" onclick="DeleteProduct('${codeProduct}')">Delete</button>
-    </li>
-    <li class="list-group-item d-flex justify-content-between">
-      <span>Total (USD)</span>
-      <strong id="totalMoney">${formatNumber(total)}</strong>
     </li>
   </script>
   
