--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
   <script id="cartTemplate" type="text/x-jQuery-tmpl">
     <li class="list-group-item d-flex justify-content-between lh-sm">
       <div>
-        <h6 class="my-0">${codeProduct}</h6>
-        <small class="text-muted">${nameProduct}<br>
+        <h6 class="my-0">${nameProduct}</h6>
+        <small class="text-muted">${codeProduct}<br>
           Unit: <b>${nowQuantity}</b> ${unit}</small>
       </div>
       <span class="text-muted"><b>${formatNumber(intomoney)}</b></span><br>
